[package]
name = "sql_fmt_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "sql_fmt_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
sqlformat = "0.3.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
