[package]
name = "sql_fmt_nif"
version = "0.3.0"
authors = ["Alex Koutmos"]
edition = "2021"

[lib]
name = "sql_fmt_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35.0"
sqlformat = "0.3.1"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
