cargo-features = ["edition2024"]

[package]
name = "sql_fmt_nif"
version = "0.3.0"
authors = ["Alex Koutmos"]
edition = "2024"

[lib]
name = "sql_fmt_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35.0"
sqruff-lib= "0.25.17"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
